feat (frontend): agregar estructura y estilo al footer

--- a/index.html
+++ b/index.html
@@ -18,9 +18,44 @@
     <section>
 
     </section>
-    <!-- adalia -->
+
     <footer>
-        
+        <div class="container">
+            <div class="info">
+                <div class="info-content">
+                    <div class="info-price">
+                        <h2>Costo</h2>
+                        <p class="price">$3500</p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam rerum odio voluptates
+                            cupiditate. Laudantium aperiam, asperiores cum porro illo temporibus sapiente fugit libero
+                            minus, sit, dolore commodi facilis dolores omnis?
+                        </p>
+                    </div>
+                    <div class="info-txt">
+                        <h2>Princing list</h2>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam fuga incidunt at vero.
+                            Amet numquam hic voluptatum a recusandae dolor obcaecati pariatur quos. Dicta ut quia autem
+                            rem porro esse?
+                        </p>
+                        <a href="#" class="btn-1">Informacion</a>
+                    </div>
+                </div>
+                <div>
+                    <hr>
+                    <div class="enlaces">
+                        <h3>Logo</h3>
+                        <div class="enlace">
+                            <li><a href="#">Lorem</a></li>
+                            <li><a href="#">Lorem</a></li>
+                            <li><a href="#">Lorem</a></li>
+                            <li><a href="#">Lorem</a></li>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
