--- a/index.html
+++ b/index.html
@@ -8,7 +8,30 @@
 <body>
     <!-- isai -->
     <header>
-
+        <div>
+            <a href="#">Logo</a>
+            <input type="checkbox" id="menu">
+            <label for="menu">
+                <img src="#" class="menu-icono" alt="">
+            </label>
+            <nav>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Portiafolios</a></li>
+                <li><a href="#">Contactos</a></li>
+            </nav>
+        </div>
+        <div>
+            <div class="">
+                <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h1>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                </p>
+                <a href="#" class="btn-1">Mas informacion</a>
+                <a href="#" class="btn-1">Mas informacion</a>
+            </div>
+            <img src="#" alt="">
+        </div>
     </header>
     <!-- edeny -->
     <main>
