--- a/index.html
+++ b/index.html
@@ -35,28 +35,28 @@
     </header>
     <main class="services containe">
         <div class="service">
-            <img src="" alt="">
+            <img src="img/icon1.svg" alt="">
             <h3>Servicio 1</h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur.
             </p>
         </div>
         <div class="service">
-            <img src="" alt="">
+            <img src="img/icon2.svg" alt="">
             <h3>Servicio 2</h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur.
             </p>
         </div>
         <div class="service">
-            <img src="" alt="">
+            <img src="img/icon3.svg" alt="">
             <h3>Servicio 3</h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur.
             </p>
         </div>
         <div class="service">
-            <img src="" alt="">
+            <img src="img/icon4.svg" alt="">
             <h3>Servicio 4</h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur.
