--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
 <body>
     <!-- isai -->
     <header>
-        <div>
-            <a href="#">Logo</a>
+        <div class="menu container">
+            <a href="#" class="logo">Logo</a>
             <input type="checkbox" id="menu">
             <label for="menu">
-                <img src="#" class="menu-icono" alt="">
+                <img src="img/menu-btn.png" class="menu-icono" alt="">
             </label>
-            <nav>
+            <nav class="navbar">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Servicios</a></li>
                 <li><a href="#">Portiafolios</a></li>
                 <li><a href="#">Contactos</a></li>
             </nav>
         </div>
-        <div>
-            <div class="">
+        <div class="header-content container">
+            <div class="content">
                 <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h1>
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -30,7 +30,7 @@
                 <a href="#" class="btn-1">Mas informacion</a>
                 <a href="#" class="btn-1">Mas informacion</a>
             </div>
-            <img src="#" alt="">
+            <img src="img/astronauta.png" alt="astronauta">
         </div>
     </header>
     <main class="services containe">
