rama portafolio y las imagenes

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <!-- isai -->
+
     <header>
         <div>
             <a href="#">Logo</a>
@@ -37,13 +39,56 @@
     <main>
 
     </main>
-    <!-- kevin -->
-    <section>
+    section class="porfolios container">
+    <!--kevin-->
+    <h2>Portafolio</h2>
+    <div class="porfolio">
+        <img src="img/img1 (1).png">
+        <div class="porfolio-1">
+            <h3>Porfolio 1</h3>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error tempore id dolor sunt, quia iste perferendis a repellendus necessitatibus voluptatum, tempora saepe illo deserunt beatae laudantium neque ullam doloribus ex?
+            </p>
+            <a href="#" class="btn-2">Informacion</a>
+        </div>
+    </div>
 
-    </section>
-    <!-- adalia -->
-    <footer>
-        
-    </footer>
+    <div class="porfolio">
+        <div class="porfolio-2">
+            <h3>Porfolio 2</h3>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error tempore id dolor sunt, quia iste perferendis a repellendus necessitatibus voluptatum, tempora saepe illo deserunt beatae laudantium neque ullam doloribus ex?
+            </p>
+            <a href="#" class="btn-2">Informacion</a>
+        </div>
+        <img src="img/img2 (1).png">
+    </div>
+
+    <div class="porfolio">
+        <img src="img/img3.png">
+        <div class="porfolio-2">
+            <h3>Porfolio 3</h3>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error tempore id dolor sunt, quia iste perferendis a repellendus necessitatibus voluptatum, tempora saepe illo deserunt beatae laudantium neque ullam doloribus ex?
+            </p>
+            <a href="#" class="btn-2">Informacion</a>
+        </div>
+
+        <div class="porfolio">
+            <div class="porfolio-2">
+                <h3>Porfolio 4</h3>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error tempore id dolor sunt, quia iste perferendis a repellendus necessitatibus voluptatum, tempora saepe illo deserunt beatae laudantium neque ullam doloribus ex?
+                </p>
+                <a href="#" class="btn-2">Informacion</a>
+            </div>
+            <img src="img/img4.png">
+        </div>
+        </section>
+        <!-- adalia -->
+        <footer>
+
+        </footer>
 </body>
+
 </html>
