--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,13 +17,16 @@
             <label for="menu">
                 <img src="img/menu-btn.png" class="menu-icono" alt="">
             </label>
+
             <nav class="navbar">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Servicios</a></li>
                 <li><a href="#">Portiafolios</a></li>
                 <li><a href="#">Contactos</a></li>
             </nav>
+
         </div>
+
         <div class="header-content container">
             <div class="content">
                 <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h1>
@@ -35,6 +39,7 @@
             <img src="img/astronauta.png" alt="astronauta">
         </div>
     </header>
+    
     <main class="services containe">
         <div class="service">
             <img src="img/icon1.svg" alt="">
@@ -64,14 +69,12 @@
                 Lorem ipsum dolor sit amet consectetur.
             </p>
         </div>
-
-    <main>
-
     </main>
-    section class="porfolios container">
+
+    <section class="portafolios container">
     <!--kevin-->
     <h2>Portafolio</h2>
-    <div class="porfolio">
+    <div class="portafolio">
         <img src="img/img1 (1).png">
         <div class="porfolio-1">
             <h3>Porfolio 1</h3>
@@ -82,8 +85,8 @@
         </div>
     </div>
 
-    <div class="porfolio">
-        <div class="porfolio-2">
+    <div class="portafolio">
+        <div class="portafolio-2">
             <h3>Porfolio 2</h3>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error tempore id dolor sunt, quia iste perferendis a repellendus necessitatibus voluptatum, tempora saepe illo deserunt beatae laudantium neque ullam doloribus ex?
@@ -93,7 +96,7 @@
         <img src="img/img2 (1).png">
     </div>
 
-    <div class="porfolio">
+    <div class="portafolio">
         <img src="img/img3.png">
         <div class="porfolio-2">
             <h3>Porfolio 3</h3>
@@ -103,8 +106,8 @@
             <a href="#" class="btn-2">Informacion</a>
         </div>
 
-        <div class="porfolio">
-            <div class="porfolio-2">
+        <div class="portafolio">
+            <div class="portafolio-2">
                 <h3>Porfolio 4</h3>
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error tempore id dolor sunt, quia iste perferendis a repellendus necessitatibus voluptatum, tempora saepe illo deserunt beatae laudantium neque ullam doloribus ex?
@@ -113,9 +116,10 @@
             </div>
             <img src="img/img4.png">
         </div>
-        </section>
-        <!-- adalia -->
-        <footer><!--ada-->
+    </section>
+
+    <!-- adalia -->
+    <footer><!--ada-->
         <div class="container">
             <div class="info">
                 <div class="info-content">
